# flux

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md
backend/: .gitignore  MANIFEST.in  dev-requirements.txt  openapi.yaml  pyproject.toml  setup.py  wsgi.py
backend/flux/: __init__.py  cli.py  config.py
backend/flux/api/: common.py  static.py
backend/flux/api/v0/: __init__.py  default.py  index.py  playback.py  user.py
backend/flux/app/: __init__.py  api.py  app.py  openapi.yaml
backend/flux/cli/: __init__.py  common.py  run.py
backend/flux/cli/index/: __init__.py  add.py  common.py  create.py  remove.py
backend/flux/cli/user/: create.py  delete.py  demote.py  password.py  promote.py
backend/flux/db/: __init__.py  common.py  schema.sql
backend/src/flux/: config.py  exceptions.py  github.py
backend/src/flux/api/: common.py  static.py
backend/src/flux/api/v0/: index.py  user.py
backend/src/flux/app/: app.py
backend/src/flux/cli/: __init__.py  common.py  run.py
backend/src/flux/cli/index/: __init__.py  add.py  common.py  create.py  remove.py  show.py
backend/src/flux/cli/update/: __init__.py  common.py  migrate.py
backend/src/flux/cli/user/: __init__.py  common.py
backend/src/flux/db/: schema.sql
backend/tests/: conftest.py
backend/tests/test_api/test_v0/: test_index.py  test_playback.py  test_user.py
backend/tests/test_cli/: test_user.py
backend/tests/test_cli/test_index/: test_add.py  test_create.py  test_remove.py  test_show.py
backend/tests/test_db/: test_common.py
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+56 files in other folders)
