[project]
name = "flux"
description = "a conservation law for your video library"
version = "0.2.0"
requires-python = ">= 3.10"
authors = [
    { name = "SR", email = "srichters@uni-muenster.de" },
]
maintainers = [
  {name = "SR", email = "srichters@uni-muenster.de"}
]
# readme = "README.md"
dependencies = [
    "Flask>=3,<4",
    "gunicorn",
    "befehl>=0.1.2,<1.0.0",
    "filetype>=1.2.0,<2.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Flask",
]
license = "MIT"

[project.urls]
Source = "https://github.com/RichtersFinger/flux"

[project.scripts]
flux = "flux:cli"

[project.optional-dependencies]
dev = [
    "Flask-CORS>=5,<6",
    "pytest>=8,<9",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["build ~= 1.4", "setuptools >= 80"]

[tool.setuptools.package-data]
flux = [
    "client/**/*",
    "db/schema.sql",
]
